--- a/materiallogindemo-master/app/src/main/res/values/strings.xml
+++ b/materiallogindemo-master/app/src/main/res/values/strings.xml
@@ -7,6 +7,18 @@
     <string name="open">Open</string>
     <string name="close">Close</string>
 
+    <string name="google_maps_API_key">AIzaSyDXg_vw3rHfm8doZ8kLuYwDbZqcNCSmFeU</string>
+
+
+    <string-array name="spot_numbers">
+        <item> -- Select -- </item>
+        <item>01 </item>
+        <item>02</item>
+        <item>03 </item>
+        <item>04 </item>
+    </string-array>
+
+
     <string-array name="starting_time">
         <item> -- Select -- </item>
         <item>07 </item>
@@ -70,4 +82,5 @@
         <item> 1 </item>
 
     </string-array>
+    <string name="title_activity_maps">Map</string>
 </resources>
