--- a/materiallogindemo-master/app/src/main/res/values/strings.xml
+++ b/materiallogindemo-master/app/src/main/res/values/strings.xml
@@ -18,6 +18,15 @@
         <item>04 </item>
     </string-array>
 
+    <string-array name="days">
+        <item>Sun </item>
+        <item>Mon</item>
+        <item>Tue</item>
+        <item>Wed</item>
+        <item>Thu</item>
+        <item>Fri</item>
+        <item>Sat</item>
+    </string-array>
 
     <string-array name="starting_time">
         <item> -- Select -- </item>
